--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -31,7 +31,7 @@ http {
     server_name _;
     keepalive_timeout 5;
 
-    location  /eventserver {
+    location  /eventserver/ {
       # Implicit localhost for single dyno; 
       # trailing slash to strip path prefix
       proxy_pass "http://127.0.0.1:8000/";
